<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>fr.robotv2</groupId>
    <artifactId>QuestPlugin</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>QuestPlugin</name>

    <properties>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <relocations>
                        <relocation>
                            <pattern>net.byteflux.libby</pattern>
                            <shadedPattern>fr.robotv2.questplugin.libs.libby</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.cryptomorin.xseries</pattern>
                            <shadedPattern>fr.robotv2.questplugin.libs.xseries</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>it.sauronsoftware.cron4j</pattern>
                            <shadedPattern>fr.robotv2.questplugin.libs.cron4j</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>revxrsal.commands</pattern>
                            <shadedPattern>fr.robotv2.questplugin.libs.lamp.common</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>revxrsal.commands.bukkit</pattern>
                            <shadedPattern>fr.robotv2.questplugin.libs.lamp.bukkit</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>io.github.classgraph</pattern>
                            <shadedPattern>fr.robotv2.questplugin.libs.classgraph</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>nonapi.io.github.classgraph</pattern>
                            <shadedPattern>fr.robotv2.questplugin.libs.classgraph-nonapi</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.slf4j</pattern>
                            <shadedPattern>fr.robotv2.questplugin.libs.slf4j</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.zaxxer.hikari</pattern>
                            <shadedPattern>fr.robotv2.questplugin.libs.hikari</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>spigotmc-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>jitpack</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>AlessioDP</id>
            <url>https://repo.alessiodp.com/releases/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.17.1-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>24.0.0</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7.1</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.github.cryptomorin</groupId>
            <artifactId>XSeries</artifactId>
            <version>13.3.3</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>it.sauronsoftware.cron4j</groupId>
            <artifactId>cron4j</artifactId>
            <version>2.2.5</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.github.Revxrsal.Lamp</groupId>
            <artifactId>common</artifactId>
            <version>3.3.6</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>com.github.Revxrsal.Lamp</groupId>
            <artifactId>bukkit</artifactId>
            <version>3.3.6</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>io.github.classgraph</groupId>
            <artifactId>classgraph</artifactId>
            <version>4.8.157</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>4.0.3</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>net.byteflux</groupId>
            <artifactId>libby-bukkit</artifactId> <!-- Replace bukkit if you're using another platform -->
            <version>1.3.1</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.duckdb</groupId>
            <artifactId>duckdb_jdbc</artifactId>
            <version>1.3.2.0</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
</project>
